[package]
name = "riddle-lang"
version = "0.1.0"
authors = ["Riccardo De Benedictis"]
edition = "2024"
description = "RiDDLe is a language for the definition of timeline-based domains and problem definitions, designed to facilitate the integration with solvers and to increase modularity and reusability of domain models."
readme = "README.md"
repository = "https://github.com/pstlab/RiDDLe"
license-file = "LICENSE"
keywords = ["parser", "planning", "domain", "language", "timeline"]
categories = ["parser-implementations", "compilers"]

[lib]
name = "riddle"
